--- a/solutions/071-exercise-ensembles_breast_cancer_solution.ipynb
+++ b/solutions/071-exercise-ensembles_breast_cancer_solution.ipynb
@@ -1,8 +1,19 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<table align=\"left\">\n",
+        "  <td>\n",
+        "    <a href=\"https://colab.research.google.com/github/jdecorte/ai_ml/blob/main/solutions/071-exercise-ensembles_breast_cancer_solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+        "  </td>\n",
+        "</table>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -83,7 +94,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -295,7 +306,7 @@
               "[5 rows x 32 columns]"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -320,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -375,7 +386,9 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "df.info()"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -388,12 +401,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "AJELc5MV1GjS"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "X = df.drop(['id', 'diagnosis'], axis = 1)\n",
+        "y = df['diagnosis']"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -406,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -431,7 +447,10 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "numerical_ix = X.select_dtypes(include=['int64', 'float64']).columns\n",
+        "print(numerical_ix)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -444,12 +463,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "metadata": {
         "id": "72MFbKsX2WGW"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "col_transform = ColumnTransformer(transformers=[('standard_scaler', StandardScaler(), numerical_ix)])"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -462,12 +483,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 10,
       "metadata": {
         "id": "1G7hJhzp1auG"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "from sklearn.model_selection import train_test_split    \n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42) "
+      ]
     },
     {
       "cell_type": "markdown",
@@ -480,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -497,7 +521,9 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -533,7 +559,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -553,7 +579,24 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "log_clf = LogisticRegression(random_state=42)\n",
+        "rnd_clf = RandomForestClassifier(random_state=42)\n",
+        "svm_clf = SVC(random_state=42)\n",
+        "vot_clf = VotingClassifier(estimators=[('log_clf', log_clf), ('rnd_clf', rnd_clf), ('svm_clf', svm_clf)], voting='hard')\n",
+        "\n",
+        "all_clf = [('log_clf', log_clf), ('rnd_clf', rnd_clf), ('svm_clf', svm_clf), ('vot_clf', vot_clf)]\n",
+        "\n",
+        "labels = ['B','M']\n",
+        "\n",
+        "for clf_tuple in all_clf:\n",
+        "  # define the data preparation and modeling pipeline\n",
+        "  pipeline = Pipeline([('prep',col_transform), (clf_tuple[0], clf_tuple[1])])\n",
+        "  pipeline.fit(X_train, y_train)\n",
+        "  y_pred = pipeline.predict(X_test)\n",
+        "  tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+        "  print(f\"{clf_tuple[0]} accuracy_score = {accuracy_score(y_test, y_pred)}  TN = {tn}   FP = {fp}   FN = {fn}   TP = {tp}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -577,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -597,7 +640,24 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "log_clf = LogisticRegression(random_state=42)\n",
+        "rnd_clf = RandomForestClassifier(random_state=42)\n",
+        "svm_clf = SVC(C=1, coef0=1, degree=2, kernel='poly', random_state=42)\n",
+        "vot_clf = VotingClassifier(estimators=[('log_clf', log_clf), ('rnd_clf', rnd_clf), ('svm_clf', svm_clf)], voting='hard')\n",
+        "\n",
+        "all_clf = [('log_clf', log_clf), ('rnd_clf', rnd_clf), ('svm_clf', svm_clf), ('vot_clf', vot_clf)]\n",
+        "\n",
+        "labels = ['B','M']\n",
+        "\n",
+        "for clf_tuple in all_clf:\n",
+        "  # define the data preparation and modeling pipeline\n",
+        "  pipeline = Pipeline([('prep',col_transform), (clf_tuple[0], clf_tuple[1])])\n",
+        "  pipeline.fit(X_train, y_train)\n",
+        "  y_pred = pipeline.predict(X_test)\n",
+        "  tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+        "  print(f\"{clf_tuple[0]} accuracy_score = {accuracy_score(y_test, y_pred)}  TN = {tn}   FP = {fp}   FN = {fn}   TP = {tp}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -612,16 +672,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {
         "id": "GwdN3gEp-WNN"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "param_grid = { \n",
+        "    'n_estimators': [100, 200, 400, 600],\n",
+        "    'max_leaf_nodes': [2, 4, 6, 10, 14, 16, 18],\n",
+        "    'max_depth' : [2, 4, 6, 8, 10]\n",
+        "}"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -641,7 +707,15 @@
         }
       ],
       "source": [
-        "\n"
+        "# Use GridSearchCV to find the best parameters.\n",
+        "grid_svc = GridSearchCV(RandomForestClassifier(random_state = 42), param_grid, scoring='accuracy', cv=3)\n",
+        "pipeline = Pipeline([('prep',col_transform), ('grid_svc', grid_svc)])\n",
+        "pipeline.fit(X_train, y_train)\n",
+        "\n",
+        "# best estimator\n",
+        "print(f\"best estimator = {grid_svc.best_estimator_}\")\n",
+        "# best score\n",
+        "print(f\"best score = {grid_svc.best_score_}\")\n"
       ]
     },
     {
@@ -658,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -887,7 +961,10 @@
           "output_type": "execute_result"
         }
       ],
-      "source": []
+      "source": [
+        "importances = pd.DataFrame({'column_name': X.columns, 'importance': grid_svc.best_estimator_.feature_importances_})\n",
+        "importances.head(30)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -900,6 +977,7 @@
         "It seems really difficult to find better values for the RandomForestClassifier. So let's try something else, to improve the results.  \n",
         "In the previous steps, we used a 'hard' voting classifier.  \n",
         "We wonder if we can get any better results if we use a 'soft' voting classifier.  \n",
+        "Remember the remark at the bottom of page 194 in the book.\n",
         "\n",
         "log_clf accuracy_score = 0.9647887323943662  TN = 85   FP = 2   FN = 3   TP = 52  \n",
         "rnd_clf accuracy_score = 0.9647887323943662  TN = 85   FP = 2   FN = 3   TP = 52  \n",
@@ -909,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -929,7 +1007,24 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "log_clf = LogisticRegression(random_state=42)\n",
+        "rnd_clf = RandomForestClassifier(random_state=42)\n",
+        "svm_clf = SVC(C=1, coef0=1, degree=2, kernel='poly', random_state=42, probability = True)\n",
+        "vot_clf = VotingClassifier(estimators=[('log_clf', log_clf), ('rnd_clf', rnd_clf), ('svm_clf', svm_clf)], voting='soft')\n",
+        "\n",
+        "all_clf = [('log_clf', log_clf), ('rnd_clf', rnd_clf), ('svm_clf', svm_clf), ('vot_clf', vot_clf)]\n",
+        "\n",
+        "labels = ['B','M']\n",
+        "\n",
+        "for clf_tuple in all_clf:\n",
+        "  # define the data preparation and modeling pipeline\n",
+        "  pipeline = Pipeline([('prep',col_transform), (clf_tuple[0], clf_tuple[1])])\n",
+        "  pipeline.fit(X_train, y_train)\n",
+        "  y_pred = pipeline.predict(X_test)\n",
+        "  tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+        "  print(f\"{clf_tuple[0]} accuracy_score = {accuracy_score(y_test, y_pred)}  TN = {tn}   FP = {fp}   FN = {fn}   TP = {tp}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -989,7 +1084,19 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "for clf_tuple in all_clf:\n",
+        "  # define the data preparation and modeling pipeline\n",
+        "  pipeline = Pipeline([('prep',col_transform), (clf_tuple[0], clf_tuple[1])])\n",
+        "  pipeline.fit(X_train, y_train)\n",
+        "  y_scores = pipeline.predict_proba(X_test)\n",
+        "  print(f\"*** {clf_tuple[0]} ***\")\n",
+        "  for ((index, correct), scores) in zip(y_test.items(), y_scores):\n",
+        "    predicted = np.argmax(scores)\n",
+        "    correct_0_1 = 0 if correct == 'B' else 1\n",
+        "    if correct_0_1 != predicted:\n",
+        "      print(f\"index = {index}\\tcorrect = {correct}   predicted = {predicted}   scores = {scores}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1011,7 +1118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1033,7 +1140,23 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "bag_clf = BaggingClassifier(LogisticRegression(), n_estimators=100, max_samples=150, bootstrap=True, n_jobs=-1, oob_score=True)\n",
+        "pipeline = Pipeline([('prep',col_transform), ('bag_clf', bag_clf)])\n",
+        "pipeline.fit(X_train, y_train)\n",
+        "\n",
+        "print(f\"bag_clf.oob_score_ is {pipeline[1].oob_score_}\")\n",
+        "y_pred = pipeline.predict(X_test)\n",
+        "y_scores = pipeline.predict_proba(X_test)\n",
+        "tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+        "print(f\"bag_clf accuracy_score = {accuracy_score(y_test, y_pred)}  TN = {tn}   FP = {fp}   FN = {fn}   TP = {tp}\")\n",
+        "\n",
+        "for ((index, correct), scores) in zip(y_test.items(), y_scores):\n",
+        "  predicted = np.argmax(scores)\n",
+        "  correct_0_1 = 0 if correct == 'B' else 1\n",
+        "  if correct_0_1 != predicted:\n",
+        "    print(f\"index = {index}\\tcorrect = {correct}   predicted = {predicted}   scores = {scores}\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1054,7 +1177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1073,7 +1196,25 @@
           ]
         }
       ],
-      "source": []
+      "source": [
+        "ext_clf = ExtraTreesClassifier(n_estimators=150, random_state=42)\n",
+        "ada_clf = AdaBoostClassifier(n_estimators=200, algorithm=\"SAMME.R\", learning_rate=0.5, random_state = 42)\n",
+        "gbc_clf = GradientBoostingClassifier(n_estimators=200, learning_rate=1.0, max_depth=1, random_state=42)\n",
+        "\n",
+        "all_clf = [('ext_clf', ext_clf), ('ada_clf', ada_clf), ('gbc_clf', gbc_clf)]\n",
+        "\n",
+        "labels = ['B','M']\n",
+        "\n",
+        "for clf_tuple in all_clf:\n",
+        "  # define the data preparation and modeling pipeline\n",
+        "  pipeline = Pipeline([('prep',col_transform), (clf_tuple[0], clf_tuple[1])])\n",
+        "  pipeline.fit(X_train, y_train)\n",
+        "  y_pred = pipeline.predict(X_test)\n",
+        "  tn, fp, fn, tp = confusion_matrix(y_test, y_pred).ravel()\n",
+        "  print(f\"{clf_tuple[0]} accuracy_score = {accuracy_score(y_test, y_pred)}  TN = {tn}   FP = {fp}   FN = {fn}   TP = {tp}\")\n",
+        "\n",
+        "\n"
+      ]
     }
   ],
   "metadata": {
@@ -1096,7 +1237,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.0"
+      "version": "3.9.12"
     }
   },
   "nbformat": 4,
