--- a/070-ensemble_learning_and_random_forests.ipynb
+++ b/070-ensemble_learning_and_random_forests.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,11 +301,13 @@
    "metadata": {},
    "source": [
     "# Bagging and Pasting\n",
-    "Using a diverse set of classifiers:\n",
+    "Using a diverse set of classifiers can be accomplished in several ways:\n",
     "- use very different training algorithms (see above)\n",
+    "\n",
+    "OR\n",
     "- use the same training algorithm for every predictor and train them on different random subsets of the training set\n",
-    "- _bagging_: sampling _with replacement_: each training sample can appear multiple times when training a single predictor\n",
-    "- _pasting_: sampling _without replacement_\n",
+    "  - _bagging_: sampling _with replacement_: each training sample can appear multiple times when training a single predictor\n",
+    "  - _pasting_: sampling _without replacement_\n",
     "\n",
     "Conclusion: \n",
     "\n",
