--- a/070-ensemble_learning_and_random_forests.ipynb
+++ b/070-ensemble_learning_and_random_forests.ipynb
@@ -342,7 +342,7 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "bag_clf = BaggingClassifier(\n",
-    "    DecisionTreeClassifier(), n_estimators=500,\n",
+    "    DecisionTreeClassifier(), n_estimators=500,                  # bootstrap : True --> with replacement\n",
     "    max_samples=100, bootstrap=True, n_jobs=-1,random_state=42)  # n_jobs: number of CPU cores used for training and prediction (-1 = all available)\n",
     "bag_clf.fit(X_train, y_train)\n",
     "y_pred = bag_clf.predict(X_test)"
