--- a/071-exercise-ensembles_breast_cancer.ipynb
+++ b/071-exercise-ensembles_breast_cancer.ipynb
@@ -1037,24 +1037,21 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "vKGQsju5I_mc"
-      },
+      "metadata": {},
       "source": [
         "### Part 7 \n",
         "\n",
         "We are a bit disappointed in the RandomForestClassifier (remember how much better RandomForestClassifier did than SGDClassifier on Heart disease).\n",
         "\n",
-        "So we are going to try ExtraTreesClassifier, AdaBoostClassifier and GradientBoostingClassifier to see if we perhaps can get some better results. Do this the same way as you did in Part 1.\n",
+        "So we are going to try AdaBoostClassifier and GradientBoostingClassifier to see if we perhaps can get some better results. Do this the same way as you did in Part 1.\n",
         "\n",
-        "ext_clf accuracy_score = 0.9647887323943662  TN = 86   FP = 1   FN = 4   TP = 51  \n",
         "ada_clf accuracy_score = 0.9647887323943662  TN = 87   FP = 0   FN = 5   TP = 50  \n",
         "gbc_clf accuracy_score = 0.9507042253521126  TN = 85   FP = 2   FN = 5   TP = 50  "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1062,17 +1059,7 @@
         "id": "Gt4K82Jk81Em",
         "outputId": "31c79d59-1f49-4bbd-9dfb-06e757b38a39"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "ext_clf accuracy_score = 0.9647887323943662  TN = 86   FP = 1   FN = 4   TP = 51\n",
-            "ada_clf accuracy_score = 0.9647887323943662  TN = 87   FP = 0   FN = 5   TP = 50\n",
-            "gbc_clf accuracy_score = 0.9507042253521126  TN = 85   FP = 2   FN = 5   TP = 50\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": []
     }
   ],
