--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -61,28 +61,38 @@
     "7. Ensemble Learning and Random Forests\n",
     "    1. [Notebook](070-ensemble_learning_and_random_forests.ipynb)\n",
     "    2. [Exercise](071-exercise-ensembles_breast_cancer.ipynb)\n",
-    "8. Dimensionality Reduction\n",
-    "   1. [t-SNE Visualization](085-tsne_visualization.ipynb)\n",
-    "9. Unsupervised Learning\n",
+    "8. Unsupervised Learning\n",
     "   1. [Association Rules](080-association_rules.ipynb)\n",
     "   2. [Association Rules: case online retail](081-market_basket_analysis_retail.ipynb)\n",
     "   3. [Exercise AdventureWorks](082-exercise_adventure_works.ipynb)\n",
     "   4. [Clustering](083-clustering.ipynb)\n",
     "   5. [Exercise \"Wholesale customers\"](084-clustering_exercise_wholesale_customers.ipynb)\n",
-    "\n",
+    "9. Dimensionality Reduction\n",
+    "   1. [Dimensionality Reduction via t-SNE Visualization](090-tsne_visualization.ipynb)\n",
     "   \n",
     "###  PART 2 - Neural Networks and Deep Learning\n",
     "\n",
     "1.  Artificial Neural Networks with Keras\n",
     "    1.  [Notebook](100-neural_nets_with_keras.ipynb)\n",
+    "    2.  [Exericse Penguins - Breast Cancer](101-exercise_penguins_breast_cancer.ipynb)\n",
     "2.  Training Deep Neural Networks\n",
-    "3.  Deep Computer Vision Using Convolutional Neural Networks\n",
+    "    1.  [Notebook](110-training_deep_neural_networks.ipynb)\n",
+    "    2.  [Excercise Churn](111-exercise_churn.ipynb)\n",
+    "3.  Document Classification & NLP\n",
+    "    1.  [Notebook](120-document_classification_and_nlp.ipynb)\n",
+    "    2.  [Case SPAM](121-pretrained_word_embeddings_case_spam.ipynb)\n",
+    "    3.  [Exercise E-mail classification](122-exercise_email_classification.ipynb)\n",
+    "4.  Deep Computer Vision Using Convolutional Neural Networks\n",
+    "    1.  [Notebook](130-deep_computer_vision_with_cnns.ipynb)\n",
+    "    2.  [Excerice CNN -MNIST](131-deep_computer_vision_with_cnns_exercise_mnist.ipynb)\n",
     "\n",
     "### SOLUTIONS\n",
     "\n",
     "- [numpy](solutions/012-3-numpy-exercises_solution.ipynb)\n",
     "- [Monte Carlo](solutions/015-exercise_montecarlo_solution.ipynb)\n",
     "- [Building OAT](solutions/021-exercise_building_oat_solution.ipynb)\n",
+    "- [Heart Disease](solutions/031-exercise_heart_disease_solution.ipynb)\n",
+    "- [Ensembles Breast Cancer](solutions/071-exercise-ensembles_breast_cancer_solution.ipynb)\n",
     "\n"
    ]
   }
