--- a/080-association_rules.ipynb
+++ b/080-association_rules.ipynb
@@ -9,10 +9,10 @@
         "## Association rules\n",
         "- is an example of descriptive analytics or unsupervised learning\n",
         "- used to uncover associations between items\n",
-        "- example: analysis of products that are sold together\n",
+        "- example: analysis of products that are sold together (= market basket analysis)\n",
         "    - one of the key techniques used by retailers  \n",
         "    - are intended to identify strong rules discovered in transaction data\n",
-        "- the **a-priori algorithm** is usably used to find association rules\n",
+        "- the **a-priori** or **FPGrowth** algorigthms are usably used to find association rules\n",
         "- Example: Amazon  \n",
         "  \n",
         "![](https://github.com/HOGENT-Databases/BI-BigData/blob/master/notebooks/images/amazon.png?raw=1)\n",
@@ -33,9 +33,9 @@
         "- Rule:  if $LEFT$ then $RIGHT$ ($LEFT$ &rarr; $RIGHT$)\n",
         "- 4 numerical values:\n",
         "    - $N_{LEFT}$ = Number of instances matching LEFT (e.g. n° of customers buying cheese and milk) \n",
-        "    - $N_{RIGHT}$ = Number of instances matching RIGHT\n",
-        "    - $N_{BOTH}$ = Number of instances matching both LEFT and RIGHT\n",
-        "    - $N_{TOTAL}$ = Total number of instances  \n",
+        "    - $N_{RIGHT}$ = Number of instances matching RIGHT (e.g. n° of customers buying bread) \n",
+        "    - $N_{BOTH}$ = Number of instances matching both LEFT and RIGHT (e.g. n° of customers buying cheese, milk and bread) \n",
+        "    - $N_{TOTAL}$ = Total number of instances ((e.g. n° of customers)\n",
         "   \n",
         "   \n",
         "- **Confidence** (Predictive Accuracy, Reliability) of a rule  \n",
@@ -50,9 +50,9 @@
         "  \n",
         "- **Completeness** of a rule \n",
         "    - $N_{BOTH} / N_{RIGTH}$ =The proportion of the matching right-hand sides that are correctly predicted by the rule\n",
-        "    - Of all those who by bread, how many did also by cheese and milk? In other words, of all those who by bread, for how many will we predict this by the rule? \n",
-        "\n",
+        "    - Of all those who by bread, how many did also by cheese and milk? In other words, of all those who by bread, for how many will we predict this by the rule?    \n",
         "  \n",
+        "      \n",
         "- _Support of item set_ S = the proportion of all the transactions that contain all the items in S\n",
         "  \n",
         "  \n",
@@ -85,13 +85,17 @@
         "- **Measure economic impact** (e.g. profit, cost) of the association rules\n",
         "\n",
         "### Visualisation\n",
-        "![](https://github.com/HOGENT-Databases/BI-BigData/blob/master/notebooks/images/assocation_rules_powerbi.png?raw=1)\n",
+        "![](img/assocation_rules_powerbi.png?raw=1)\n",
         "\n",
         "\n"
       ]
     }
   ],
   "metadata": {
+    "colab": {
+      "name": "association_rules.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -108,10 +112,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.6"
-    },
-    "colab": {
-      "name": "association_rules.ipynb",
-      "provenance": []
     }
   },
   "nbformat": 4,
