--- a/082-exercise_adventure_works.ipynb
+++ b/082-exercise_adventure_works.ipynb
@@ -1,31 +1,10 @@
 {
-  "metadata": {
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.9-final"
-    },
-    "orig_nbformat": 2,
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "colab": {
-      "name": "association_rules_exercise.ipynb",
-      "provenance": []
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cpyKTkHAkZUK"
+      },
       "source": [
         "Use the data from the csv file adventureworks_assoc.csv.  Determine which items are often bought together when\n",
         "\n",
@@ -33,11 +12,7 @@
         "* “together” means “same customer”\n",
         "\n",
         "Play around with the values for support and lift to limit the number of rules. \n"
-      ],
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cpyKTkHAkZUK"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -48,19 +23,19 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(32166, 4)"
             ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "import pandas as pd\n",
-        "url = 'https://raw.githubusercontent.com/HOGENT-Databases/BI-BigData/master/data/adventureworks_assoc.csv'\n",
+        "url = 'https://raw.githubusercontent.com/jdecorte/ai_ml/main/datasets/adventureworks_assoc.csv'\n",
         "df = pd.read_csv(url,sep=';')\n",
         "df.shape"
       ]
@@ -76,5 +51,30 @@
         "df.head()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "association_rules_exercise.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.9-final"
+    },
+    "orig_nbformat": 2
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
