--- a/082-exercise_adventure_works.ipynb
+++ b/082-exercise_adventure_works.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "uZJ1ktATkZUN",
         "outputId": "1839ed07-be2f-4053-ce62-d3bce665dee0"
@@ -57,8 +57,12 @@
       "name": "association_rules_exercise.ipynb",
       "provenance": []
     },
+    "interpreter": {
+      "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.12 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -71,7 +75,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.9-final"
+      "version": "3.9.12"
     },
     "orig_nbformat": 2
   },
