--- a/083-clustering.ipynb
+++ b/083-clustering.ipynb
@@ -67,7 +67,7 @@
         "id": "wc4-maJJlbUU"
       },
       "source": [
-        "### k-means Clustering\n",
+        "### k-means Clustering: overview\n",
         "* Exclusive clustering algorithm: each object is assigned to precisely one of a set of clusters.\n",
         "* Start by deciding how many clusters we would like to form from our data &rarr; k\n",
         "* There are many ways in which k clusters might potentially be formed.\n",
@@ -82,7 +82,7 @@
         "id": "vMW3ILgslbUV"
       },
       "source": [
-        "### k-means Clustering\n",
+        "### k-means Clustering: algorithm\n",
         "* Select k observations as initial cluster centroids (seeds)\n",
         "* Assign each observation to cluster that has closest centroid (for example, in Euclidean sense)\n",
         "* When all observations have been assigned, recalculate positions of K centroids\n",
@@ -95,7 +95,7 @@
         "id": "nVsC_o60lbUV"
       },
       "source": [
-        "### k-means Clustering\n",
+        "\n",
         "<center><img src=\"https://github.com/HOGENT-Databases/BI-BigData/blob/master/notebooks/images/kmeans.png?raw=1\"></center>"
       ]
     },
@@ -184,6 +184,10 @@
   ],
   "metadata": {
     "celltoolbar": "Slideshow",
+    "colab": {
+      "name": "clustering.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -200,10 +204,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.7.6"
-    },
-    "colab": {
-      "name": "clustering.ipynb",
-      "provenance": []
     }
   },
   "nbformat": 4,
