--- a/000-index.ipynb
+++ b/000-index.ipynb
@@ -66,9 +66,10 @@
     "   2. [Association Rules: case online retail](081-market_basket_analysis_retail.ipynb)\n",
     "   3. [Exercise AdventureWorks](082-exercise_adventure_works.ipynb)\n",
     "   4. [Clustering](083-clustering.ipynb)\n",
-    "   5. [Exercise \"Wholesale customers\"](084-clustering_exercise_wholesale_customers.ipynb)\n",
+    "   5. [Clustering Case Income-Spent](084-clustering_case_income_spent.ipynb)\n",
+    "   6. [Exercise \"Wholesale customers\"](085-clustering_exercise_wholesale_customers.ipynb)\n",
     "9. Dimensionality Reduction\n",
-    "   1. [Dimensionality Reduction via t-SNE Visualization](090-tsne_visualization.ipynb)\n",
+    "   1. [t-SNE Visualization](090-tsne_visualization.ipynb)\n",
     "   \n",
     "###  PART 2 - Neural Networks and Deep Learning\n",
     "\n",
