--- a/084-clustering_case_income_spent.ipynb
+++ b/084-clustering_case_income_spent.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "NBdF5_6Zgi-z",
         "outputId": "6b8afb12-bbe8-4104-ee9a-9e737fcb10b2"
@@ -22,13 +22,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "   INCOME  SPENT\n",
-            "0    2330    150\n",
-            "1    2500    187\n",
-            "2    2040    172\n",
-            "3    2360    178\n",
-            "4    3540    163\n",
-            "303\n"
+            "   Channel  Region  Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicatessen\n",
+            "0        2       3  12669  9656     7561     214              2674          1338\n",
+            "1        2       3   7057  9810     9568    1762              3293          1776\n",
+            "2        2       3   6353  8808     7684    2405              3516          7844\n",
+            "3        1       3  13265  1196     4221    6404               507          1788\n",
+            "4        2       3  22615  5410     7198    3915              1777          5185\n",
+            "440\n"
           ]
         },
         {
@@ -64,38 +64,110 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>INCOME</th>\n",
-              "      <td>303.0</td>\n",
-              "      <td>2452.739274</td>\n",
-              "      <td>484.994116</td>\n",
-              "      <td>1260.0</td>\n",
-              "      <td>2110.0</td>\n",
-              "      <td>2400.0</td>\n",
-              "      <td>2740.0</td>\n",
-              "      <td>4170.0</td>\n",
+              "      <th>Channel</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>1.322727</td>\n",
+              "      <td>0.468052</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1.00</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.00</td>\n",
+              "      <td>2.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>SPENT</th>\n",
-              "      <td>303.0</td>\n",
-              "      <td>149.646865</td>\n",
-              "      <td>22.905161</td>\n",
-              "      <td>71.0</td>\n",
-              "      <td>133.5</td>\n",
-              "      <td>153.0</td>\n",
-              "      <td>166.0</td>\n",
-              "      <td>202.0</td>\n",
+              "      <th>Region</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>2.543182</td>\n",
+              "      <td>0.774272</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.00</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>3.00</td>\n",
+              "      <td>3.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Fresh</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>12000.297727</td>\n",
+              "      <td>12647.328865</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>3127.75</td>\n",
+              "      <td>8504.0</td>\n",
+              "      <td>16933.75</td>\n",
+              "      <td>112151.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Milk</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>5796.265909</td>\n",
+              "      <td>7380.377175</td>\n",
+              "      <td>55.0</td>\n",
+              "      <td>1533.00</td>\n",
+              "      <td>3627.0</td>\n",
+              "      <td>7190.25</td>\n",
+              "      <td>73498.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Grocery</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>7951.277273</td>\n",
+              "      <td>9503.162829</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>2153.00</td>\n",
+              "      <td>4755.5</td>\n",
+              "      <td>10655.75</td>\n",
+              "      <td>92780.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Frozen</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>3071.931818</td>\n",
+              "      <td>4854.673333</td>\n",
+              "      <td>25.0</td>\n",
+              "      <td>742.25</td>\n",
+              "      <td>1526.0</td>\n",
+              "      <td>3554.25</td>\n",
+              "      <td>60869.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Detergents_Paper</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>2881.493182</td>\n",
+              "      <td>4767.854448</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>256.75</td>\n",
+              "      <td>816.5</td>\n",
+              "      <td>3922.00</td>\n",
+              "      <td>40827.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Delicatessen</th>\n",
+              "      <td>440.0</td>\n",
+              "      <td>1524.870455</td>\n",
+              "      <td>2820.105937</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>408.25</td>\n",
+              "      <td>965.5</td>\n",
+              "      <td>1820.25</td>\n",
+              "      <td>47943.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "        count         mean         std     min     25%     50%     75%     max\n",
-              "INCOME  303.0  2452.739274  484.994116  1260.0  2110.0  2400.0  2740.0  4170.0\n",
-              "SPENT   303.0   149.646865   22.905161    71.0   133.5   153.0   166.0   202.0"
+              "                  count          mean           std   min      25%     50%       75%       max\n",
+              "Channel           440.0      1.322727      0.468052   1.0     1.00     1.0      2.00       2.0\n",
+              "Region            440.0      2.543182      0.774272   1.0     2.00     3.0      3.00       3.0\n",
+              "Fresh             440.0  12000.297727  12647.328865   3.0  3127.75  8504.0  16933.75  112151.0\n",
+              "Milk              440.0   5796.265909   7380.377175  55.0  1533.00  3627.0   7190.25   73498.0\n",
+              "Grocery           440.0   7951.277273   9503.162829   3.0  2153.00  4755.5  10655.75   92780.0\n",
+              "Frozen            440.0   3071.931818   4854.673333  25.0   742.25  1526.0   3554.25   60869.0\n",
+              "Detergents_Paper  440.0   2881.493182   4767.854448   3.0   256.75   816.5   3922.00   40827.0\n",
+              "Delicatessen      440.0   1524.870455   2820.105937   3.0   408.25   965.5   1820.25   47943.0"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -110,7 +182,7 @@
         "pd.set_option(\"display.width\", 1000)\n",
         "\n",
         "#Read the csv file\n",
-        "url = 'https://raw.githubusercontent.com/jdecorte/ai_ml/main/datasets/customers.csv'\n",
+        "url = 'https://raw.githubusercontent.com/jdecorte/ai_ml/main/datasets/wholesale_customers_data.csv'\n",
         "dataset=pd.read_csv(url,sep=',')\n",
         "\n",
         "#Explore the dataset\n",
@@ -132,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "ZyKdz6fggi-1",
         "outputId": "e3f95e7b-103b-4f1c-9df9-983f053fa601"
@@ -506,8 +578,11 @@
       "name": "clustering_case_income_spent.ipynb",
       "provenance": []
     },
+    "interpreter": {
+      "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.12 64-bit",
       "language": "python",
       "name": "python3"
     },
@@ -521,7 +596,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.9-final"
+      "version": "3.9.12"
     }
   },
   "nbformat": 4,
