--- a/085-clustering_exercise_wholesale_customers.ipynb
+++ b/085-clustering_exercise_wholesale_customers.ipynb
@@ -1,52 +1,182 @@
 {
-  "metadata": {
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.9-final"
-    },
-    "orig_nbformat": 2,
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "colab": {
-      "name": "clustering_exercise_wholesale_customers.ipynb",
-      "provenance": []
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NS8U-Zo8lpvI"
+      },
       "source": [
         "Use the dataset “wholesale_customers_data.csv”. It contains for each customer the amount spent in different product categories.  \n",
         "Keep the data for the categories “Grocery” and “Milk”.  \n",
         "Determine the optimal number of clusters\n"
-      ],
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "NS8U-Zo8lpvI"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "tY4JuzsblpvK",
         "outputId": "7e11649c-9aa6-4840-865d-bb070d099f73"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Channel</th>\n",
+              "      <th>Region</th>\n",
+              "      <th>Fresh</th>\n",
+              "      <th>Milk</th>\n",
+              "      <th>Grocery</th>\n",
+              "      <th>Frozen</th>\n",
+              "      <th>Detergents_Paper</th>\n",
+              "      <th>Delicatessen</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>12669</td>\n",
+              "      <td>9656</td>\n",
+              "      <td>7561</td>\n",
+              "      <td>214</td>\n",
+              "      <td>2674</td>\n",
+              "      <td>1338</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>7057</td>\n",
+              "      <td>9810</td>\n",
+              "      <td>9568</td>\n",
+              "      <td>1762</td>\n",
+              "      <td>3293</td>\n",
+              "      <td>1776</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>6353</td>\n",
+              "      <td>8808</td>\n",
+              "      <td>7684</td>\n",
+              "      <td>2405</td>\n",
+              "      <td>3516</td>\n",
+              "      <td>7844</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>13265</td>\n",
+              "      <td>1196</td>\n",
+              "      <td>4221</td>\n",
+              "      <td>6404</td>\n",
+              "      <td>507</td>\n",
+              "      <td>1788</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>22615</td>\n",
+              "      <td>5410</td>\n",
+              "      <td>7198</td>\n",
+              "      <td>3915</td>\n",
+              "      <td>1777</td>\n",
+              "      <td>5185</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>435</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>29703</td>\n",
+              "      <td>12051</td>\n",
+              "      <td>16027</td>\n",
+              "      <td>13135</td>\n",
+              "      <td>182</td>\n",
+              "      <td>2204</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>436</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>39228</td>\n",
+              "      <td>1431</td>\n",
+              "      <td>764</td>\n",
+              "      <td>4510</td>\n",
+              "      <td>93</td>\n",
+              "      <td>2346</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>437</th>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>14531</td>\n",
+              "      <td>15488</td>\n",
+              "      <td>30243</td>\n",
+              "      <td>437</td>\n",
+              "      <td>14841</td>\n",
+              "      <td>1867</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>438</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>10290</td>\n",
+              "      <td>1981</td>\n",
+              "      <td>2232</td>\n",
+              "      <td>1038</td>\n",
+              "      <td>168</td>\n",
+              "      <td>2125</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>439</th>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>2787</td>\n",
+              "      <td>1698</td>\n",
+              "      <td>2510</td>\n",
+              "      <td>65</td>\n",
+              "      <td>477</td>\n",
+              "      <td>52</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>440 rows × 8 columns</p>\n",
+              "</div>"
+            ],
             "text/plain": [
               "     Channel  Region  Fresh   Milk  Grocery  Frozen  Detergents_Paper  \\\n",
               "0          2       3  12669   9656     7561     214              2674   \n",
@@ -75,17 +205,17 @@
               "439            52  \n",
               "\n",
               "[440 rows x 8 columns]"
-            ],
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Channel</th>\n      <th>Region</th>\n      <th>Fresh</th>\n      <th>Milk</th>\n      <th>Grocery</th>\n      <th>Frozen</th>\n      <th>Detergents_Paper</th>\n      <th>Delicatessen</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2</td>\n      <td>3</td>\n      <td>12669</td>\n      <td>9656</td>\n      <td>7561</td>\n      <td>214</td>\n      <td>2674</td>\n      <td>1338</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>3</td>\n      <td>7057</td>\n      <td>9810</td>\n      <td>9568</td>\n      <td>1762</td>\n      <td>3293</td>\n      <td>1776</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>3</td>\n      <td>6353</td>\n      <td>8808</td>\n      <td>7684</td>\n      <td>2405</td>\n      <td>3516</td>\n      <td>7844</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>3</td>\n      <td>13265</td>\n      <td>1196</td>\n      <td>4221</td>\n      <td>6404</td>\n      <td>507</td>\n      <td>1788</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>3</td>\n      <td>22615</td>\n      <td>5410</td>\n      <td>7198</td>\n      <td>3915</td>\n      <td>1777</td>\n      <td>5185</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>435</th>\n      <td>1</td>\n      <td>3</td>\n      <td>29703</td>\n      <td>12051</td>\n      <td>16027</td>\n      <td>13135</td>\n      <td>182</td>\n      <td>2204</td>\n    </tr>\n    <tr>\n      <th>436</th>\n      <td>1</td>\n      <td>3</td>\n      <td>39228</td>\n      <td>1431</td>\n      <td>764</td>\n      <td>4510</td>\n      <td>93</td>\n      <td>2346</td>\n    </tr>\n    <tr>\n      <th>437</th>\n      <td>2</td>\n      <td>3</td>\n      <td>14531</td>\n      <td>15488</td>\n      <td>30243</td>\n      <td>437</td>\n      <td>14841</td>\n      <td>1867</td>\n    </tr>\n    <tr>\n      <th>438</th>\n      <td>1</td>\n      <td>3</td>\n      <td>10290</td>\n      <td>1981</td>\n      <td>2232</td>\n      <td>1038</td>\n      <td>168</td>\n      <td>2125</td>\n    </tr>\n    <tr>\n      <th>439</th>\n      <td>1</td>\n      <td>3</td>\n      <td>2787</td>\n      <td>1698</td>\n      <td>2510</td>\n      <td>65</td>\n      <td>477</td>\n      <td>52</td>\n    </tr>\n  </tbody>\n</table>\n<p>440 rows × 8 columns</p>\n</div>"
+            ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "import pandas as pd\n",
         "\n",
-        "url = 'https://raw.githubusercontent.com/HOGENT-Databases/BI-BigData/master/data/wholesale_customers_data.csv'\n",
+        "url = 'https://raw.githubusercontent.com/jdecorte/ai_ml/main/datasets/wholesale_customers_data.csv'\n",
         "dataset=pd.read_csv(url,sep=',')\n",
         "dataset"
       ]
@@ -97,9 +227,36 @@
         "id": "fIiLvPEYlpvL"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "clustering_exercise_wholesale_customers.ipynb",
+      "provenance": []
+    },
+    "interpreter": {
+      "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.12 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.12"
+    },
+    "orig_nbformat": 2
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
