--- a/100-neural_nets_with_keras.ipynb
+++ b/100-neural_nets_with_keras.ipynb
@@ -85,9 +85,11 @@
     "  \n",
     "  ![](img/brain.png)\n",
     "  - Biological neurons produce short electrical impulses called action potentials (APs, or just signals).\n",
-    "  - These signlaes travel along the axons and make the synapses release chemical signals called neurotransmitters. \n",
+    "  - These signals travel along the axons and make the synapses release chemical signals called neurotransmitters. \n",
     "  - When a neuron receives a sufficient amount of these neurotransmitters within a few milliseconds, it fires its own electrical impulses.\n",
     "  - Thus, individual biological neurons seem to behave in a rather simple way, but they are organized in a vast network of billions, with each neuron typically connected to thousands of other neurons.\n",
+    "\n",
+    "\n",
     "- ANNs are at the very core of Deep Learning. \n",
     "- They are versatile, powerful, and scalable, making them ideal to tackle large and highly complex Machine Learning tasks such as \n",
     "  - classifying billions of images (e.g.,Google Images)\n",
@@ -168,7 +170,7 @@
     "\n",
     "iris = load_iris()\n",
     "X = iris.data[:, (2, 3)]  # petal length, petal width\n",
-    "y = (iris.target == 0).astype(np.int)\n",
+    "y = (iris.target == 0).astype(np.int)  # is it an Iris Setosa? \n",
     "\n",
     "per_clf = Perceptron(max_iter=1000, tol=1e-3, random_state=42)\n",
     "per_clf.fit(X, y)\n",
@@ -225,7 +227,8 @@
     "- The algorithm that is used for training MLP's was published in 1986 and is called _backpropagation_. \n",
     "- The algorithm looks likes this:\n",
     "  - Initialize all the hidden layers’ connection weights randomly. \n",
-    "  - It handles one mini-batch at a time (for example, containing 32 instances each), and it goes through the full training set multiple times. Each pass is called an _epoch_.\n",
+    "  - It handles one mini-batch at a time (for example, containing 32 instances each), and it goes through the full training set multiple times. \n",
+    "  - Each pass through the whole training set is called an _epoch_.\n",
     "  - **Forward pass**\n",
     "    - Each mini-batch is passed to the network’s input layer, which sends it to the first hidden layer. \n",
     "    - The algorithm then computes the output of all the neurons in this layer (for every instance in the mini-batch). \n",
@@ -720,6 +723,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reset the model\n",
     "keras.backend.clear_session()\n",
     "np.random.seed(42)\n",
     "tf.random.set_seed(42)"
@@ -1697,7 +1701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `fit()` method accepts a callbacks argument that lets you specify a list of objects that Keras will call at the start and end of training, at the start and end of each epoch, and even before and after processing each batch.\n",
+    "The `fit()` method accepts a `callbacks` argument that lets you specify a list of objects that Keras will call at the start and end of training, at the start and end of each epoch, and even before and after processing each batch.\n",
     "\n",
     "- You can implement early stopping by using the `EarlyStopping` callback. \n",
     "- It will interrupt training when it measures no progress on the validation set for a number of epochs (defined by the patience argument), and it will optionally roll back to the best model.\n"
